[package]
name = "blockchain_exchange_client"
version = "0.0.1"
authors = ["niall-bc <niall@blockchain.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket= "0.26.5"
serde_json = "1.0"
serde = { version = "1.0.106", features = ["derive"] }
rand = "0.7.3"
chrono = "0.4.0"
